syntax = "proto3";

package NSound.NService;

message TContextMessage {

}